# aldeia

./: .env  .gitignore  Makefile  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: continuos_integration.yml
aldeia/: config.py  db.py  main.py  models.py
aldeia/routers/: pessoas.py
docs/: README.md
tests/: conftest.py  test_pessoas.py
