[tool.poetry]
name = "aldeia"
version = "0.1.0"
description = ""
authors = ["Marco Lemos <marco.trab4@gmail.com>"]
license = "CC0 1.0 Universal"
readme = ["docs/README.md"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.155.3"}
fastapi = "^0.89.1"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
pip-audit = "^2.4.14"
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
