[tool.poetry]
name = "aldeia"
version = "0.1.0"
description = ""
authors = ["Marco Lemos <marco.trab4@gmail.com>"]
license = "CC0 1.0 Universal"
readme = ["docs/README.md"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
odmantic = "^0.9.2"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
pip-audit = "^2.4.14"
mkdocs = "^1.4.2"
ipython = "^8.9.0"
httpx = "^0.23.3"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
